--- a/ui/package.json
+++ b/ui/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "markdown-it": "^12.0.4"
   },
   "dependencies": {
     "dotenv": "^8.2.0"
