--- a/cms/api/index-page/models/index-page.settings.json
+++ b/cms/api/index-page/models/index-page.settings.json
@@ -21,12 +21,18 @@
     "Main": {
       "type": "richtext"
     },
+    "FeaturesTitle": {
+      "type": "string"
+    },
     "Features": {
       "type": "component",
       "repeatable": true,
       "component": "features.features"
     },
     "Main2": {
+      "type": "richtext"
+    },
+    "Footer": {
       "type": "richtext"
     }
   }
