--- a/ui/package.json
+++ b/ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oz-ui",
   "version": "1.0.0",
-  "description": "",
+  "description": "OZ site UI",
   "main": "index.js",
   "scripts": {
     "dev": "eleventy --serve",
