--- a/ui/package.json
+++ b/ui/package.json
@@ -13,10 +13,9 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "markdown-it": "^12.0.4",
     "workbox-cli": "^6.1.1"
   },
-  "dependencies": {
-    "dotenv": "^8.2.0"
-  }
+  "dependencies": {}
 }
