--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
     "axios": "^0.21.1",
+    "date-fns": "^2.18.0",
     "dotenv": "^8.2.0",
     "markdown-it": "^12.0.4",
     "workbox-cli": "^6.1.1"
