--- a/ui/package.json
+++ b/ui/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "eleventy --serve",
-    "build": "NODE_ENV=production eleventy && workbox generateSW workbox-config.js"
+    "build": "NODE_ENV=production rm -rf _site && mkdir _site && cp -r static/ _site/static && eleventy && workbox generateSW workbox-config.js"
   },
   "keywords": [],
   "author": "Eugene Mirotin",
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
+    "@mightyplow/eleventy-plugin-cache-buster": "^1.1.3",
     "axios": "^0.21.1",
     "date-fns": "^2.18.0",
     "dotenv": "^8.2.0",
