--- a/cms/package.json
+++ b/cms/package.json
@@ -20,6 +20,7 @@
     "strapi-plugin-email": "3.5.3",
     "strapi-plugin-upload": "3.5.3",
     "strapi-plugin-users-permissions": "3.5.3",
+    "strapi-provider-upload-aws-s3": "^3.5.3",
     "strapi-utils": "3.5.3"
   },
   "author": {
