--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "date-fns": "^2.18.0",
     "dotenv": "^8.2.0",
+    "front-matter": "^4.0.2",
     "markdown-it": "^12.0.4",
     "workbox-cli": "^6.1.1"
   },
