--- a/ui/vercel.json
+++ b/ui/vercel.json
@@ -1,8 +1,5 @@
 {
   "version": 2,
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/static/arch/$1" }
-  ],
-  "rewrites": [{ "source": "/statute", "destination": "/statute/ru" }]
+  "rewrites": [{ "source": "/:path*", "destination": "/static/arch/:path" }],
+  "redirects": [{ "source": "/statute", "destination": "/statute/ru" }]
 }
