--- a/cms/api/doc/models/doc.settings.json
+++ b/cms/api/doc/models/doc.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "docs",
   "info": {
-    "name": "Doc"
+    "name": "Doc",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -18,6 +19,9 @@
     },
     "Body": {
       "type": "richtext"
+    },
+    "Date": {
+      "type": "date"
     }
   }
 }
