--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@mightyplow/eleventy-plugin-cache-buster": "^1.1.3",
     "axios": "^0.21.1",
     "date-fns": "^2.18.0",
